Setting up the essential environmental variables.